--- a/admin-blog.html
+++ b/admin-blog.html
@@ -1,181 +1,121 @@
-<style>
-  .list{width:45%;border-right:1px solid #ddd;overflow:auto;padding:10px;display:flex;flex-direction:column;}
-  .filters{margin-bottom:10px;display:flex;gap:6px;flex-wrap:wrap;}
-  .filters input,.filters select{padding:4px;}
-  .form{flex:1;padding:10px;overflow:auto;}
-  table{width:100%;border-collapse:collapse;font-size:14px;}
-  th,td{border:1px solid #ddd;padding:6px;}
-  th{background:#f1f5f9;}
-  label{display:block;margin:8px 0 4px;}
-  input[type=text],textarea,select{width:100%;padding:6px;}
-  .actions{margin-top:10px;}
-  button{margin-right:6px;padding:6px 12px;}
-  .pagination{margin-top:8px;display:flex;gap:6px;}
-  .admin-blog{display:flex;overflow:hidden;height:100%;}
-</style>
+<div id="blog-admin">
 
-<div class="admin-blog">
-  <div class="list">
-    <h3>記事一覧</h3>
-    <div class="filters">
-      <input type="text" id="searchBox" placeholder="検索 (タイトル/slug)">
-      <select id="monthFilter"><option value="">すべての年月</option></select>
-      <button onclick="applyFilters()">検索</button>
-    </div>
-    <table id="articlesTable">
-      <thead><tr><th>タイトル</th><th>Slug</th><th>タグ</th><th>状態</th><th>作成日</th></tr></thead>
-      <tbody></tbody>
-    </table>
-    <div class="pagination">
-      <button onclick="prevPage()">前へ</button>
-      <span id="pageInfo"></span>
-      <button onclick="nextPage()">次へ</button>
-    </div>
-    <button onclick="newArticle()">＋ 新規作成</button>
-  </div>
+  <h2>ブログ記事管理</h2>
+  <form id="article-form">
+    <label>タイトル
+      <input type="text" id="title" required>
+    </label>
+    <label>Slug
+      <input type="text" id="slug" required>
+    </label>
+    <label>カテゴリ
+      <select id="category" required>
+        <option value="">選択してください</option>
+        <option>お知らせ</option>
+        <option>プレスリリース</option>
+        <option>イベント</option>
+        <option>採用情報</option>
+        <option>コラム</option>
+        <option>制度・法改正</option>
+        <option>サービス更新</option>
+        <option>導入事例</option>
+        <option>メディア掲載</option>
+        <option>地域連携</option>
+      </select>
+    </label>
+    <label>タグ（カンマ区切り）
+      <input type="text" id="tags">
+    </label>
+    <label>説明
+      <textarea id="description"></textarea>
+    </label>
+    <label>本文
+      <textarea id="content"></textarea>
+    </label>
+    <label>サムネイルURL
+      <input type="url" id="thumbnail_url">
+    </label>
+    <label>公開
+      <input type="checkbox" id="published">
+    </label>
+    <button type="submit">保存</button>
+  </form>
 
-  <div class="form">
-    <h3>記事フォーム</h3>
-    <form id="articleForm">
-      <input type="hidden" id="articleId">
-      <label>タイトル<input type="text" id="title"></label>
-      <label>Slug<input type="text" id="slug"></label>
-      <label>説明<textarea id="description" rows="2"></textarea></label>
-      <label>本文<textarea id="content"></textarea></label>
-      <label>サムネイルURL<input type="text" id="thumbnail"></label>
-      <label>タグ (カンマ区切り)<input type="text" id="tags"></label>
-      <label><input type="checkbox" id="published"> 公開する</label>
-      <div class="actions">
-        <button type="button" onclick="saveArticle()">保存</button>
-        <button type="button" onclick="deleteArticle()">削除</button>
-      </div>
-    </form>
-  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>タイトル</th>
+        <th>Slug</th>
+        <th>カテゴリ</th>
+        <th>タグ</th>
+        <th>状態</th>
+        <th>作成日</th>
+        <th>操作</th>
+      </tr>
+    </thead>
+    <tbody id="articles-list"></tbody>
+  </table>
+
 </div>
 
-<!-- CKEditor CDN -->
-<script src="https://cdn.ckeditor.com/ckeditor5/41.2.0/classic/ckeditor.js"></script>
-
-<script type="module">
-  import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
-  const sb = createClient(
-    "https://htnmjsqgoapvuanrsuma.supabase.co",
-    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-  );
-
-  const $ = s => document.querySelector(s);
-  const tbody = $("#articlesTable tbody");
-  let currentPage = 1;
-  const pageSize = 10;
-  let currentSearch = "";
-  let currentMonth = "";
-  let editor;
-
-  ClassicEditor.create(document.querySelector('#content'))
-    .then(newEditor => { editor = newEditor; })
-    .catch(error => console.error(error));
-
-  async function loadMonths(){
-    const { data, error } = await sb.from("articles").select("created_at");
-    if(error) return;
-    const months = [...new Set(data.map(r => {
-      const d = new Date(r.created_at);
-      return d.getFullYear()+"-"+String(d.getMonth()+1).padStart(2,"0");
-    }))].sort().reverse();
-    $("#monthFilter").innerHTML = '<option value="">すべての年月</option>' + months.map(m=>`<option value="${m}">${m}</option>`).join("");
-  }
-
-  async function loadArticles(){
-    let query = sb.from("articles").select("*", { count: "exact" }).order("created_at",{ascending:false}).range((currentPage-1)*pageSize, currentPage*pageSize-1);
-    if(currentSearch){
-      query = query.or(`title.ilike.%${currentSearch}%,slug.ilike.%${currentSearch}%`);
+<script>
+  async function loadArticles() {
+    const { data, error } = await supabase
+      .from("articles")
+      .select("*")
+      .order("created_at", { ascending: false });
+    if (error) {
+      console.error(error);
+      return;
     }
-    if(currentMonth){
-      const [y,m] = currentMonth.split("-");
-      const start = new Date(y,m-1,1).toISOString();
-      const end = new Date(y,m,0,23,59,59).toISOString();
-      query = query.gte("created_at",start).lte("created_at",end);
-    }
-    const { data, count, error } = await query;
-    if(error){console.error(error);return;}
-    tbody.innerHTML = data.map(a => `
-      <tr onclick="editArticle('${a.id}')">
-        <td>${a.title||""}</td>
-        <td>${a.slug||""}</td>
-        <td>${Array.isArray(a.tags) ? a.tags.join(",") : ""}</td>
-        <td>${a.published?"公開":"非公開"}</td>
+    const list = document.getElementById("articles-list");
+    list.innerHTML = "";
+    data.forEach(a => {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${a.title}</td>
+        <td>${a.slug}</td>
+        <td>${a.category || ""}</td>
+        <td>${(a.tags || []).join(",")}</td>
+        <td>${a.published ? "公開" : "下書き"}</td>
         <td>${new Date(a.created_at).toLocaleDateString()}</td>
-      </tr>`).join("");
-    const totalPages = Math.ceil(count/pageSize);
-    $("#pageInfo").textContent = currentPage+" / "+(totalPages||1);
+        <td><button onclick='editArticle(${JSON.stringify(a)})'>編集</button></td>
+      `;
+      list.appendChild(tr);
+    });
   }
 
-  async function editArticle(id){
-    const { data, error } = await sb.from("articles").select("*").eq("id",id).single();
-    if(error){console.error(error);return;}
-    $("#articleId").value = data.id;
-    $("#title").value = data.title||"";
-    $("#slug").value = data.slug||"";
-    $("#description").value = data.description||"";
-    editor.setData(data.content || "");
-    $("#thumbnail").value = data.thumbnail_url||"";
-    $("#tags").value = Array.isArray(data.tags) ? data.tags.join(",") : "";
-    $("#published").checked = data.published;
-  }
-
-  function newArticle(){
-    $("#articleId").value="";
-    $("#articleForm").reset();
-    if(editor){ editor.setData(""); }
-  }
-
-  async function saveArticle(){
-    const id = $("#articleId").value;
-    const tagsValue = $("#tags").value.trim();
-    const tags = tagsValue === "" ? [] : tagsValue.split(",").map(t => t.trim()).filter(t => t);
-
+  async function saveArticle(e) {
+    e.preventDefault();
     const row = {
-      title: $("#title").value,
-      slug: $("#slug").value,
-      description: $("#description").value,
-      content: editor ? editor.getData() : "",
-      thumbnail_url: $("#thumbnail").value,
-      tags: tags,
-      published: $("#published").checked
+      title: document.getElementById("title").value,
+      slug: document.getElementById("slug").value,
+      category: document.getElementById("category").value,
+      tags: document.getElementById("tags").value.split(",").map(s => s.trim()).filter(s => s),
+      description: document.getElementById("description").value,
+      content: document.getElementById("content").value,
+      thumbnail_url: document.getElementById("thumbnail_url").value,
+      published: document.getElementById("published").checked
     };
-    let res;
-    if(id){
-      res = await sb.from("articles").update(row).eq("id",id).select();
-    }else{
-      res = await sb.from("articles").insert(row).select();
+    let { error } = await supabase.from("articles").upsert(row, { onConflict: ["slug"] });
+    if (error) {
+      console.error(error);
     }
-    if(res.error){alert("保存エラー:"+res.error.message);}else{alert("保存しました");loadArticles();loadMonths();}
+    await loadArticles();
+    e.target.reset();
   }
 
-  async function deleteArticle(){
-    const id = $("#articleId").value;
-    if(!id){alert("記事を選択してください");return;}
-    if(!confirm("削除しますか？")) return;
-    const { error } = await sb.from("articles").delete().eq("id",id);
-    if(error){alert("削除エラー:"+error.message);}else{alert("削除しました");loadArticles();newArticle();loadMonths();}
+  function editArticle(a) {
+    document.getElementById("title").value = a.title || "";
+    document.getElementById("slug").value = a.slug || "";
+    document.getElementById("category").value = a.category || "";
+    document.getElementById("tags").value = (a.tags || []).join(",");
+    document.getElementById("description").value = a.description || "";
+    document.getElementById("content").value = a.content || "";
+    document.getElementById("thumbnail_url").value = a.thumbnail_url || "";
+    document.getElementById("published").checked = a.published || false;
   }
 
-  function applyFilters(){
-    currentSearch = $("#searchBox").value.trim();
-    currentMonth = $("#monthFilter").value;
-    currentPage = 1;
-    loadArticles();
-  }
-  function prevPage(){ if(currentPage>1){ currentPage--; loadArticles(); } }
-  function nextPage(){ currentPage++; loadArticles(); }
-
+  document.getElementById("article-form").addEventListener("submit", saveArticle);
   loadArticles();
-  loadMonths();
-  window.editArticle = editArticle;
-  window.newArticle = newArticle;
-  window.saveArticle = saveArticle;
-  window.deleteArticle = deleteArticle;
-  window.applyFilters = applyFilters;
-  window.prevPage = prevPage;
-  window.nextPage = nextPage;
 </script>
