--- a/admin-blog.html
+++ b/admin-blog.html
@@ -1,61 +1,69 @@
-<div id="blog-admin">
+<div id="admin-blog" class="admin-section">
+  <div class="admin-header">
+    <h2>ブログ記事管理</h2>
+  </div>
+  <div class="admin-body">
+    <!-- 記事一覧 -->
+    <div class="admin-list">
+      <table>
+        <thead>
+          <tr>
+            <th>タイトル</th>
+            <th>Slug</th>
+            <th>カテゴリ</th>
+            <th>タグ</th>
+            <th>状態</th>
+            <th>作成日</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody id="articles-list"></tbody>
+      </table>
+    </div>
 
-  <h2>ブログ記事管理</h2>
-  <form id="article-form">
-    <label>タイトル
-      <input type="text" id="title" required>
-    </label>
-    <label>Slug
-      <input type="text" id="slug" required>
-    </label>
-    <label>カテゴリ
-      <select id="category" required>
-        <option value="">選択してください</option>
-        <option>お知らせ</option>
-        <option>プレスリリース</option>
-        <option>イベント</option>
-        <option>採用情報</option>
-        <option>コラム</option>
-        <option>制度・法改正</option>
-        <option>サービス更新</option>
-        <option>導入事例</option>
-        <option>メディア掲載</option>
-        <option>地域連携</option>
-      </select>
-    </label>
-    <label>タグ（カンマ区切り）
-      <input type="text" id="tags">
-    </label>
-    <label>説明
-      <textarea id="description"></textarea>
-    </label>
-    <label>本文
-      <textarea id="content"></textarea>
-    </label>
-    <label>サムネイルURL
-      <input type="url" id="thumbnail_url">
-    </label>
-    <label>公開
-      <input type="checkbox" id="published">
-    </label>
-    <button type="submit">保存</button>
-  </form>
-
-  <table>
-    <thead>
-      <tr>
-        <th>タイトル</th>
-        <th>Slug</th>
-        <th>カテゴリ</th>
-        <th>タグ</th>
-        <th>状態</th>
-        <th>作成日</th>
-        <th>操作</th>
-      </tr>
-    </thead>
-    <tbody id="articles-list"></tbody>
-  </table>
-
+    <!-- 編集フォーム -->
+    <div class="admin-form">
+      <form id="article-form">
+        <label>タイトル
+          <input type="text" id="title" required>
+        </label>
+        <label>Slug
+          <input type="text" id="slug" required>
+        </label>
+        <label>カテゴリ
+          <select id="category" required>
+            <option value="">選択してください</option>
+            <option>お知らせ</option>
+            <option>プレスリリース</option>
+            <option>イベント</option>
+            <option>採用情報</option>
+            <option>コラム</option>
+            <option>制度・法改正</option>
+            <option>サービス更新</option>
+            <option>導入事例</option>
+            <option>メディア掲載</option>
+            <option>地域連携</option>
+          </select>
+        </label>
+        <label>タグ（カンマ区切り）
+          <input type="text" id="tags">
+        </label>
+        <label>説明
+          <textarea id="description"></textarea>
+        </label>
+        <label>本文
+          <textarea id="content"></textarea>
+        </label>
+        <label>サムネイルURL
+          <input type="url" id="thumbnail_url">
+        </label>
+        <label>公開
+          <input type="checkbox" id="published">
+        </label>
+        <button type="submit">保存</button>
+      </form>
+    </div>
+  </div>
 </div>
 
 <script>
