--- a/admin-blog.html
+++ b/admin-blog.html
@@ -23,7 +23,7 @@
       <button onclick="applyFilters()">検索</button>
     </div>
     <table id="articlesTable">
-      <thead><tr><th>タイトル</th><th>Slug</th><th>タグ</th><th>状態</th><th>作成日</th></tr></thead>
+      <thead><tr><th>タイトル</th><th>Slug</th><th>カテゴリ</th><th>タグ</th><th>状態</th><th>作成日</th></tr></thead>
       <tbody></tbody>
     </table>
     <div class="pagination">
@@ -43,6 +43,24 @@
       <label>説明<textarea id="description" rows="2"></textarea></label>
       <label>本文<textarea id="content"></textarea></label>
       <label>サムネイルURL<input type="text" id="thumbnail"></label>
+
+      <!-- ★ カテゴリ追加 -->
+      <label>カテゴリ
+        <select id="category">
+          <option value="">選択してください</option>
+          <option>お知らせ</option>
+          <option>プレスリリース</option>
+          <option>イベント</option>
+          <option>採用情報</option>
+          <option>コラム</option>
+          <option>制度・法改正</option>
+          <option>サービス更新</option>
+          <option>導入事例</option>
+          <option>メディア掲載</option>
+          <option>地域連携</option>
+        </select>
+      </label>
+
       <label>タグ (カンマ区切り)<input type="text" id="tags"></label>
       <label><input type="checkbox" id="published"> 公開する</label>
       <div class="actions">
@@ -102,6 +120,7 @@
       <tr onclick="editArticle('${a.id}')">
         <td>${a.title||""}</td>
         <td>${a.slug||""}</td>
+        <td>${a.category||""}</td>
         <td>${Array.isArray(a.tags) ? a.tags.join(",") : ""}</td>
         <td>${a.published?"公開":"非公開"}</td>
         <td>${new Date(a.created_at).toLocaleDateString()}</td>
@@ -119,6 +138,7 @@
     $("#description").value = data.description||"";
     editor.setData(data.content || "");
     $("#thumbnail").value = data.thumbnail_url||"";
+    $("#category").value = data.category||"";
     $("#tags").value = Array.isArray(data.tags) ? data.tags.join(",") : "";
     $("#published").checked = data.published;
   }
@@ -140,6 +160,7 @@
       description: $("#description").value,
       content: editor ? editor.getData() : "",
       thumbnail_url: $("#thumbnail").value,
+      category: $("#category").value,
       tags: tags,
       published: $("#published").checked
     };
