--- a/test.html
+++ b/test.html
@@ -3,254 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>合同会社WaJu | 公式ホームページ</title>
+  <title>ブログ一覧 | 合同会社WaJu</title>
 
-  <!-- SEO / OGP -->
-  <meta name="description" content="合同会社WaJuの公式ホームページです。介護・福祉業界のICT活用を推進し、CARELAYを中心としたサービスを提供しています。">
-  <meta property="og:title" content="合同会社WaJu | 公式ホームページ">
-  <meta property="og:description" content="合同会社WaJuの公式ホームページです。介護・福祉業界のICT活用を推進し、CARELAYを中心としたサービスを提供しています。">
-  <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0001.png">
+  <!-- SEO -->
+  <meta name="description" content="CARELAYや介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
+  <meta property="og:title" content="ブログ一覧 | 合同会社WaJu">
+  <meta property="og:description" content="CARELAYや介護・福祉業界に関する最新情報、コラム、イベントなどをお届けします。">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://waju.co.jp/index.html">
+  <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0006.png">
+  <meta property="og:url" content="https://waju.co.jp/blog/">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png">
   <link rel="apple-touch-icon" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png">
 
-  <!-- TailwindCSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Tailwind Config for Inter font and custom colors -->
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            sans: ['Inter', 'sans-serif'],
-          },
-          colors: {
-            'waju-primary': '#1e40af', // Blue-700 equivalent
-            'waju-light': '#eff6ff',   // Blue-50 equivalent
-            'waju-accent': '#f59e0b',  // Amber-500
-          }
-        }
-      }
-    }
-  </script>
-
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHLJ5K19ZE"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R49H9DTN70"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-ZHLJ5K19ZE');
+    gtag('config', 'G-R49H9DTN70');
   </script>
+
+  <!-- TailwindCSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body id="page-body" class="font-sans bg-gray-50">
+<body id="page-body">
   <header id="site-header"></header>
 
   <main id="page-main">
-    <!-- Hero Section -->
-    <!-- 背景をグラデーションにし、中央のコンテンツエリアを max-w-6xl に設定 -->
-    <section id="hero" class="relative w-full py-0 bg-gradient-to-b from-waju-light to-blue-100">
-      <div class="max-w-6xl mx-auto overflow-hidden shadow-2xl rounded-b-xl">
-        <!-- h-[500px] を削除し、画像のアスペクト比に高さを依存させる (h-auto) -->
-        <div id="hero-slider" class="relative flex transition-transform duration-700 ease-in-out h-auto">
-          <!-- 画像はコンテナ内でアスペクト比を維持しつつ幅100%で表示 (object-contain は object-cover に変更) -->
-          <!-- object-coverでアスペクト比を維持しつつ要素を埋め、h-fullで高さを維持します。 -->
-          <!-- 画像はもともと100%幅で設定されており、高さ指定がなくなったため、アスペクト比が維持されます -->
-          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0001.png" alt="Hero1" class="w-full h-auto object-cover flex-shrink-0"/>
-          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0002.png" alt="Hero2" class="w-full h-auto object-cover flex-shrink-0"/>
-          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0003.png" alt="Hero3" class="w-full h-auto object-cover flex-shrink-0"/>
-        </div>
-      </div>
-      <!-- テキストオーバーレイを削除 -->
-      <!-- Slider dots will be dynamically added here -->
-    </section>
+    <section class="max-w-5xl mx-auto px-6 py-12">
+      <h1 class="text-3xl font-bold text-center mb-8 text-blue-800">ブログ一覧</h1>
 
-    <!-- NEWS Section -->
-    <section id="news" class="py-16 bg-white border-b border-gray-100 shadow-inner">
-      <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">NEWS</h2>
-        <div class="space-y-4 max-w-3xl mx-auto">
-          <a href="#" class="block p-4 bg-waju-light hover:bg-waju-primary hover:text-white transition duration-300 rounded-lg shadow-md hover:shadow-xl group">
-            <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
-              <span class="text-sm font-medium text-gray-500 group-hover:text-waju-light transition duration-300 mr-4">2024.09.27</span>
-              <p class="text-gray-800 font-semibold group-hover:text-white transition duration-300">【重要】ホームページをリニューアルしました</p>
-            </div>
-          </a>
-          <a href="#" class="block p-4 bg-waju-light hover:bg-waju-primary hover:text-white transition duration-300 rounded-lg shadow-md hover:shadow-xl group">
-            <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
-              <span class="text-sm font-medium text-gray-500 group-hover:text-waju-light transition duration-300 mr-4">2024.09.01</span>
-              <p class="text-gray-800 font-semibold group-hover:text-white transition duration-300">新サービス「CARELAY」の提供を開始しました。</p>
-            </div>
-          </a>
-          <a href="#" class="block p-4 bg-waju-light hover:bg-waju-primary hover:text-white transition duration-300 rounded-lg shadow-md hover:shadow-xl group">
-            <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
-              <span class="text-sm font-medium text-gray-500 group-hover:text-waju-light transition duration-300 mr-4">2024.08.15</span>
-              <p class="text-gray-800 font-semibold group-hover:text-white transition duration-300">夏季休業のお知らせとご協力のお願い</p>
-            </div>
-          </a>
-          <a href="#" class="block p-4 bg-waju-light hover:bg-waju-primary hover:text-white transition duration-300 rounded-lg shadow-md hover:shadow-xl group">
-            <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
-              <span class="text-sm font-medium text-gray-500 group-hover:text-waju-light transition duration-300 mr-4">2023.04.01</span>
-              <p class="text-gray-800 font-semibold group-hover:text-white transition duration-300">合同会社WaJuを設立しました。</p>
-            </div>
-          </a>
-        </div>
+      <!-- カテゴリフィルタ -->
+      <div class="flex flex-wrap gap-4 mb-6 items-center">
+        <select id="categoryFilter" class="border rounded px-3 py-2">
+          <option value="">すべてのカテゴリ</option>
+        </select>
       </div>
-    </section>
 
-    <!-- ABOUT Section -->
-    <section id="about" class="py-20 bg-gray-50">
-      <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">ABOUT US</h2>
-        <div class="grid md:grid-cols-2 gap-12 items-center bg-white p-8 md:p-12 rounded-2xl shadow-2xl">
-          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0004.png" alt="About" class="rounded-xl shadow-lg transform hover:scale-[1.01] transition duration-500"/>
-          <div>
-            <h3 class="text-3xl font-bold text-gray-800 mb-6 border-l-4 border-waju-accent pl-3">社会に貢献する、新たな価値創造へ</h3>
-            <p class="text-lg text-gray-700 leading-relaxed mb-6">
-              社会福祉の一環として、介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い社会的支援ができる企業を目指しています。
-            </p>
-            <p class="text-lg text-gray-700 leading-relaxed mb-8 italic">
-              絶えず前進するための <strong>Walk</strong>、そして躍進するための <strong>Jump</strong> を心掛け、社会に貢献していきます。
-            </p>
-            <a href="/about.html" class="inline-block px-8 py-3 bg-waju-primary text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transform hover:translate-y-[-2px] transition duration-300 ease-in-out">
-              企業理念を詳しく見る
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
+      <!-- 記事一覧 -->
+      <div id="articles" class="flex flex-col gap-6"></div>
 
-    <!-- SERVICE Section -->
-    <section id="service" class="py-20 bg-waju-light">
-      <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">SERVICE</h2>
-        <div class="grid md:grid-cols-2 gap-12 items-center bg-white p-8 md:p-12 rounded-2xl shadow-2xl border-4 border-waju-primary">
-          <div class="md:order-2">
-            <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0006.png" alt="Service" class="rounded-xl shadow-lg transform hover:scale-[1.01] transition duration-500"/>
-          </div>
-          <div class="md:order-1">
-            <h3 class="text-3xl font-bold text-gray-800 mb-6 border-l-4 border-waju-accent pl-3">介護・福祉業界の課題をオンラインで解決「CARELAY（ケアレイ）」</h3>
-            <p class="text-lg text-gray-700 leading-relaxed mb-6">
-              高齢者介護サービス事業者や障害福祉サービス事業者の求人・営業・連携の問題をオンラインで解決するプラットフォームです。
-            </p>
-            <p class="text-lg text-gray-700 leading-relaxed mb-6">
-              このサービスは、業界の持続可能な発展をサポートするため、他にはない圧倒的な低コストでご提供しています。
-            </p>
-            <div class="bg-waju-accent text-white p-4 rounded-lg inline-block shadow-lg mb-8 transform rotate-[-2deg] hover:rotate-0 transition duration-300">
-              <p class="text-2xl font-black">圧倒的な低コスト <span class="text-4xl">5,500円</span>/月</p>
-            </div>
-            <a href="/service.html" class="inline-block px-8 py-3 bg-waju-primary text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transform hover:translate-y-[-2px] transition duration-300 ease-in-out">
-              サービス詳細を見る
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- VIDEO Section -->
-    <section id="video" class="py-20 bg-gray-50">
-      <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">YouTube</h2>
-        <div class="grid md:grid-cols-2 gap-8">
-          <div class="bg-white rounded-xl shadow-2xl overflow-hidden p-4">
-            <p class="text-lg font-semibold text-gray-800 mb-3 text-center">会社概要動画</p>
-            <iframe class="w-full h-[300px] rounded-lg shadow-inner" src="https://www.youtube.com/embed/CjgbFC64qOk" title="会社概要動画" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="bg-white rounded-xl shadow-2xl overflow-hidden p-4">
-            <p class="text-lg font-semibold text-gray-800 mb-3 text-center">サービス概要動画</p>
-            <iframe class="w-full h-[300px] rounded-lg shadow-inner" src="https://www.youtube.com/embed/WqQh-Ok9kjo" title="サービス概要動画" frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- SNS Section -->
-    <section id="sns" class="py-20 bg-waju-light">
-      <div class="max-w-6xl mx-auto px-6 text-center">
-        <h2 class="text-4xl font-extrabold text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">SNS</h2>
-        <div class="grid md:grid-cols-2 gap-8">
-          <div class="bg-white p-6 rounded-2xl shadow-2xl border-t-4 border-pink-500 hover:shadow-3xl transition duration-300">
-            <p class="text-3xl mb-2">📸</p>
-            <h3 class="text-xl font-bold text-gray-800 mb-4">Instagram <span class="text-pink-500">@waju_official</span></h3>
-            <p class="text-gray-600">最新投稿の埋め込みエリア</p>
-            <a href="#" class="mt-4 inline-block text-pink-600 hover:text-pink-700 font-semibold transition duration-300">Instagramを見る &rarr;</a>
-          </div>
-          <div class="bg-white p-6 rounded-2xl shadow-2xl border-t-4 border-blue-500 hover:shadow-3xl transition duration-300">
-            <p class="text-3xl mb-2">🐦</p>
-            <h3 class="text-xl font-bold text-gray-800 mb-4">X（旧Twitter） <span class="text-blue-500">@waju_corp</span></h3>
-            <p class="text-gray-600">最新投稿の埋め込みエリア</p>
-            <a href="#" class="mt-4 inline-block text-blue-600 hover:text-blue-700 font-semibold transition duration-300">X（Twitter）を見る &rarr;</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- COMPANY Section -->
-    <section id="company" class="py-20 bg-white">
-      <div class="max-w-6xl mx-auto px-6">
-        <h2 class="text-4xl font-extrabold text-center text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">COMPANY</h2>
-        <div class="w-full max-w-4xl mx-auto p-6 bg-gray-50 rounded-2xl shadow-2xl">
-          <table class="w-full text-lg">
-            <tbody>
-              <tr class="border-b border-gray-200">
-                <th class="text-left p-4 bg-waju-light font-bold w-1/4 rounded-tl-xl">会社名</th>
-                <td class="p-4 bg-white rounded-tr-xl">合同会社WaJu</td>
-              </tr>
-              <tr class="border-b border-gray-200">
-                <th class="text-left p-4 bg-waju-light font-bold">代表社員</th>
-                <td class="p-4 bg-white">大野 洋</td>
-              </tr>
-              <tr class="border-b border-gray-200">
-                <th class="text-left p-4 bg-waju-light font-bold">所在地</th>
-                <td class="p-4 bg-white">〒658-0052 兵庫県神戸市東灘区住吉東町2丁目7-20-102</td>
-              </tr>
-              <tr class="border-b border-gray-200">
-                <th class="text-left p-4 bg-waju-light font-bold">連絡先</th>
-                <td class="p-4 bg-white"><a href="mailto:info@waju.co.jp" class="text-waju-primary hover:underline font-semibold">info@waju.co.jp</a></td>
-              </tr>
-              <tr>
-                <th class="text-left p-4 bg-waju-light font-bold rounded-bl-xl">設立</th>
-                <td class="p-4 bg-white rounded-br-xl">2023年4月</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+      <!-- ページネーション -->
+      <div class="flex justify-center items-center gap-4 mt-8">
+        <button id="prevBtn" class="px-4 py-2 bg-gray-200 rounded">前へ</button>
+        <span id="pageInfo"></span>
+        <button id="nextBtn" class="px-4 py-2 bg-gray-200 rounded">次へ</button>
       </div>
     </section>
   </main>
 
   <footer id="site-footer"></footer>
-  <script>
-    // Hero Slider Script
-    const slider = document.getElementById('hero-slider');
-    const slides = slider.children;
-    let currentIndex = 0;
-    const totalSlides = slides.length;
+  <script type="module" src="/hf.js"></script>
 
-    const updateSlider = () => {
-      // 100% / totalSlides は CSS で各スライドに適用されているため、ここでは 100% 単位で移動
-      slider.style.transform = `translateX(-${currentIndex * 100 / totalSlides}%)`;
-    };
+  <script type="module">
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+    const sb = createClient(
+      "https://htnmjsqgoapvuanrsuma.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+    );
 
-    const nextSlide = () => {
-      currentIndex = (currentIndex + 1) % totalSlides;
-      updateSlider();
-    };
+    const $ = s => document.querySelector(s);
+    const articlesEl = $("#articles");
+    const categoryFilter = $("#categoryFilter");
+    const pageInfo = $("#pageInfo");
+    const prevBtn = $("#prevBtn");
+    const nextBtn = $("#nextBtn");
 
-    // Initialize layout for smooth transition calculation (each slide is 100% / totalSlides)
-    slider.style.width = `${totalSlides * 100}%`;
-    for(let i = 0; i < totalSlides; i++) {
-        // 画像は w-full h-auto object-cover flex-shrink-0 でアスペクト比を維持しつつ幅に合わせる
-        slides[i].style.width = `${100 / totalSlides}%`;
+    let currentPage = 1;
+    const pageSize = 10;
+    let currentCategory = "";
+
+    async function loadCategories() {
+      const { data, error } = await sb.from("articles").select("category");
+      if (error) return console.error(error);
+      const categories = [...new Set(data.map(a => a.category).filter(c => c))];
+      categoryFilter.innerHTML = '<option value="">すべてのカテゴリ</option>' +
+        categories.map(c => `<option value="${c}">${c}</option>`).join("");
     }
 
-    setInterval(nextSlide, 5000); // Change image every 5 seconds
-    updateSlider(); // Initial display setup
+    async function loadArticles() {
+      let query = sb.from("articles")
+        .select("*", { count: "exact" })
+        .eq("published", true)
+        .order("created_at", { ascending: false })
+        .range((currentPage-1)*pageSize, currentPage*pageSize - 1);
+
+      if (currentCategory) query = query.eq("category", currentCategory);
+
+      const { data, count, error } = await query;
+      if (error) return console.error(error);
+
+      articlesEl.innerHTML = data.map(a => `
+        <div class="flex items-start gap-4 border-b pb-4">
+          <img src="${a.thumbnail_url || ''}" alt="" 
+               class="w-24 h-24 object-contain rounded bg-gray-50 border">
+          <div class="flex-1">
+            <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded">${a.category || ""}</span>
+            <h2 class="text-lg font-semibold mt-1">
+              <a href="/blog-detail.html?slug=${a.slug}" class="hover:underline">${a.title}</a>
+            </h2>
+            <p class="text-gray-500 text-sm">${new Date(a.created_at).toLocaleDateString()}</p>
+            <p class="mt-1 text-gray-700 text-sm">
+              ${a.description || (a.content ? a.content.replace(/<[^>]+>/g,"").substring(0,80)+"…" : "")}
+            </p>
+          </div>
+        </div>
+      `).join("");
+
+      const totalPages = Math.ceil(count / pageSize);
+      pageInfo.textContent = `${currentPage} / ${totalPages || 1}`;
+      prevBtn.disabled = currentPage <= 1;
+      nextBtn.disabled = currentPage >= totalPages;
+    }
+
+    categoryFilter.addEventListener("change", () => {
+      currentCategory = categoryFilter.value;
+      currentPage = 1;
+      loadArticles();
+    });
+    prevBtn.addEventListener("click", () => { if (currentPage > 1) { currentPage--; loadArticles(); } });
+    nextBtn.addEventListener("click", () => { currentPage++; loadArticles(); });
+
+    loadCategories();
+    loadArticles();
   </script>
-  <script type="module" src="hf.js"></script>
 </body>
 </html>
